--- a/index.html
+++ b/index.html
@@ -206,6 +206,46 @@
          background-image: url('data:image/svg+xml,%3Csvg viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg"%3E%3Cfilter id="noiseFilter"%3E%3CfeTurbulence type="fractalNoise" baseFrequency="0.65" numOctaves="3" stitchTiles="stitch"/%3E%3C/filter%3E%3Crect width="100%25" height="100%25" filter="url(%23noiseFilter)"/%3E%3C/svg%3E'); opacity: 0.05; 
     }
     </style>
+<style>
+:root {
+    --primary: #00f2fe;
+    --secondary: #4facfe;
+    --bg-dark: rgba(10, 10, 20, 0.85);
+    --glass: rgba(255, 255, 255, 0.1);
+    --neon-border: rgba(0, 242, 254, 0.5);
+}
+
+body {
+    background: radial-gradient(circle at center, #1a1a2e 0%, #0f0f1b 100%) !important;
+    color: #e0e0e0 !important;
+    font-family: 'Inter', 'Segoe UI', sans-serif !important;
+    backdrop-filter: blur(10px);
+}
+
+.neo-glass, button, input, .card, div[class*="container"] {
+    background: var(--glass) !important;
+    backdrop-filter: blur(15px) !important;
+    border: 1px solid var(--neon-border) !important;
+    border-radius: 12px !important;
+    box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.37) !important;
+    transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275) !important;
+}
+
+button:hover, .btn:hover {
+    transform: scale(1.1) !important;
+    background: var(--primary) !important;
+    color: #000 !important;
+    box-shadow: 0 0 20px var(--primary) !important;
+}
+
+button:active {
+    transform: scale(0.95) !important;
+}
+
+* {
+    transition: transform 0.3s ease, background 0.3s ease !important;
+}
+</style>
 </head>
 <body>
 
